--- a/src/pages/disc-detail/disc-detail.scss
+++ b/src/pages/disc-detail/disc-detail.scss
@@ -1,9 +1,9 @@
 
-.speaker-detail img {
+.disc-detail img {
   max-width: 140px;
   border-radius: 50%;
 }
 
-.speaker-detail p {
+.disc-detail p {
   color: #60646B;
 }
