--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -1,9 +1,9 @@
-page-speaker-list {
+page-search {
   .scroll-content {
     background: #EDEDED;
   }
 
-  .speaker-card {
+  .disc-card {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -15,16 +15,16 @@ page-speaker-list {
 
   // Todo: remove when this issue https://github.com/ionic-team/ionic/issues/11212 is fixed
   @media(min-width: 769px) {
-    .speaker-card {
+    .disc-card {
       height: 370px;
     }
   }
 
-  .speaker-card ion-card-header .item {
+  .disc-card ion-card-header .item {
     padding: 4px 16px;
   }
 
-  .speaker-card ion-card-content {
+  .disc-card ion-card-content {
     padding-left: 0;
     padding-right: 0;
   }
